# ai_esp32s3

./: CMakeLists.txt  sdkconfig  sdkconfig.old
.cache/clangd/index/: ai_esp32s3.c.05F4BEECF9CB7A07.idx
main/: CMakeLists.txt  Kconfig.projbuild  app.cpp  app.h  idf_component.yml  main.cpp  type_def.h  work_task.cpp  work_task.h
main/board/: board.cpp  board.h
main/board/lc_szp_dev/: lc_szp_dev_board.cpp  lc_szp_dev_board.h
main/drivers/audio/: audio_es7210.cpp  audio_es7210.h  audio_es8311.cpp  audio_es8311.h  audio_es8311_es7210.cpp  audio_es8311_es7210.h  audio_hal.cpp  audio_hal.h  audio_input_interface.h  wav_recorder.cpp  wav_recorder.h
main/drivers/storage/: file_interface.h  sd_card.cpp  sd_card.h
